<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray01"
    android:orientation="vertical"
    tools:context=".activity.UserRegisterActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="LogIn"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                android:textSize="40dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Email"
                android:background="@drawable/edittext_background"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="14dp" />


            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Don't have an account ? "
                    android:textSize="14dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Register"
                    android:textSize="14dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorGray02"
                    android:textStyle="bold"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_login"
                android:stateListAnimator="@null"
                android:text="LogIn"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="14dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                >

                <TextView
                    android:id="@+id/tvFindPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot Password?"
                    android:textSize="14dp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:layout_marginLeft="115dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>