<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mContainer"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".activity.PlayerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/layout_top_btn"
        android:background="@drawable/gredient_bg"
        android:layout_alignParentTop="true">
        
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/back_btn"
            android:src="@drawable/ic_baseline_chevron_left_24"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="Now Playing"
            android:textColor="@color/colorWhite"
            android:layout_toEndOf="@id/back_btn"
            android:layout_toStartOf="@id/menu_btn"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/menu_btn"
            android:src="@drawable/ic_baseline_menu_24"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
        

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/card"
        android:layout_below="@id/layout_top_btn">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher"
            android:scaleType="centerCrop"
            android:id="@+id/cover_art"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/imageViewGredient"

            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="This is song name"
        android:id="@+id/song_name"
        android:layout_below="@+id/card"
        android:textColor="@color/colorWhite"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:textStyle="bold"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="This is song artist"
        android:id="@+id/song_artist"
        android:layout_below="@+id/song_name"
        android:textColor="@color/colorWhite"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/relative_layout_for_bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/gredient_bg">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_shuffle"
            android:src="@drawable/ic_baseline_shuffle_24"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/replay_5"
            android:src="@drawable/ic_baseline_replay_5_24"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_prev"
            android:src="@drawable/ic_baseline_skip_previous_24"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/play_pause"
            android:layout_marginEnd="16dp"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_pause"
            android:src="@drawable/ic_baseline_play_arrow_24"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:focusable="true"
            android:clickable="true"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_next"
            android:src="@drawable/ic_baseline_skip_next_24"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/play_pause"
            android:layout_marginStart="16dp"
            />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/forward_5"
            android:src="@drawable/ic_baseline_forward_5_24"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/id_repeat"
            android:src="@drawable/ic_baseline_repeat_24"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@id/relative_layout_for_bottom"
        android:layout_marginBottom="15dp"
        android:id="@+id/seek_bar_layout">
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1:28"
            android:id="@+id/durationPlayed"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4:28"
            android:id="@+id/durationTotal"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentBottom="true"/>
        
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@id/seek_bar_layout"
        android:layout_marginBottom="15dp"
        android:id="@+id/volume_bar_layout">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_baseline_volume_down_24"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarVolume"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentBottom="true"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_baseline_volume_up_24"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>


</RelativeLayout>